--- a/YouTube.html
+++ b/YouTube.html
@@ -6,9 +6,16 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <script src='http://code.jquery.com/jquery-2.1.3.min.js'></script>
     <script type="text/javascript" src='assets/javascript/apikey.js'></script>
+    <script src="https://www.gstatic.com/firebasejs/3.6.1/firebase.js"></script>
+
 </head>
 
 <body>
+    <input id="txtEmail" type="email" placeholder="Email">
+    <input id="txtPassword" type="password" placeholder="Password">
+    <button type="button" id="btnLogin">Log In</button>
+    <button type="button" id="btnSignUp">Sign Up</button>
+    <button id="btnLogout">Logout</button>
     <div class="container">
         <div class="addVideos">
         </div>
