--- a/index.html
+++ b/index.html
@@ -18,9 +18,12 @@
 				Google Login
 			</div>
 			<div class="col-lg-6 text-center">
-				<header>
+				<h1>
 					The Idiot Chef
-				</header>
+				</h1>
+				<h3>
+					Add ingredients to the list, and our app will generate recipe ideas for you! Full instructions and video tutorial links are included!
+				</h3>
 			</div>
 			<div class="col-lg-3">
 				
