--- a/index.html
+++ b/index.html
@@ -48,19 +48,22 @@
 		</div>
 		<div class="row">
 			<div class="col-lg-4">
-				<h3>ingredient list</h3>
+				<h3>Your ingredients</h3>
 				<section id="ingredients-list">
 					
 				</section>
 			</div>
 			<div class="col-lg-4">
-				<h3>recipe list</h3>
+				<h3>Recipes</h3>
 				<section id="recipe-list">
 				</section>
 			</div>
 			<div class="col-lg-4">
-				<h3>video list</h3>
+				<h3>Videos</h3>
 				<section id="video-list">
+					<button id="get-videos">
+						Let's get cooking!
+					</button>
 				</section>
 			</div>
 		</div>
