added food call functionality TY

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 						<input type="text" class="form-control" id="ingredients-search">
 						<span class="input-group-btn">
 						<button id='addIngredientButton' class="btn btn-default" type="button">Add Ingredient</button>
+						<button id='submitIngredientsButton' class="btn btn-default" type="button">Submit Ingredients</button>
 						</span>
 					</div>
 				</div>	
