--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-lg-4">
+			<div class="col-lg-3">
 			</div>
-			<div class="col-lg-4">
+			<div class="col-lg-6">
 				<div class="form-group">
 					<div class="input-group">
 						<input type="text" class="form-control" id="ingredients-search">
@@ -44,7 +44,7 @@
 					</div>
 				</div>	
 			</div>
-			<div class="col-lg-4">
+			<div class="col-lg-3">
 			</div>
 		</div>
 		<div class="row">
@@ -62,6 +62,7 @@
 			<div class="col-lg-4">
 				<h3>Videos</h3>
 				<section id="video-list">
+					Click on a recipe title to view videos for that recipe!
 					<button id="get-videos">
 						Let's get cooking!
 					</button>
