--- a/index.html
+++ b/index.html
@@ -13,40 +13,69 @@
 
 <body>
     <div class="container">
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">TheIdiotChef</a>
+                </div>
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav">
+                        <li class="active" id="register"><a href="">Register</a></li>
+                        <li id="userName"></li>
+                    </ul>
+                    <form id="signin" class="navbar-form navbar-right" role="form">
+                        <div id="navbar-login-form">
+                            <label for="email-input" id="login-form-message"></label>
+                            <div class="input-group">
+                                <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                                <input id="email-input" type="email" class="form-control" name="email" value="" placeholder="Member Email Address">
+                            </div>
+                            <div class="input-group">
+                                <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+                                <input id="password-input" type="password" class="form-control" name="password" value="" placeholder="Password">
+                            </div>
+                            <button type="submit" class="btn btn-primary" id="navbar-login-button">Login</button>
+                        </div>
+                        <button type="submit" class="btn btn-primary" id="navbar-logout-button">Log Out</button>
+                    </form>
+                </div>
+            </div>
+        </nav>
         <div class="jumbotron clearfix">
             <div id="title" class="panel col-xs-12 text-center">Idiot Chef</div>
             <div id="explanation" class="col-xs-12 text-center">Site Explanation</div>
         </div>
-        <div class="row text-center">
+        <div class="row text-center" id="body-container">
             <div class="button-panel panel col-xs-4">
                 <button type="button" class="btn btn-secondary btn-lg" id="btn-guest">Guest</button>
             </div>
-            <div class="button-panel panel col-xs-4" id="member-login-panel">
-                <div class="form-group">
-                    <label for="email-input">Email</label>
-                    <input type="email" class="form-control" id="email-input" aria-describedby="emailHelp" placeholder="Enter email">
-                    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+        </div>
+        <div class="modal" id="registration-modal">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h3 class="modal-title" id="lineModalLabel">Register!</h3>
+                    <button id="close-modal-button" class="btn btn-default">X</button>
                 </div>
-                <div class="form-group">
-                    <label for="password-input">Password</label>
-                    <input type="password" class="form-control" id="password-input" placeholder="Password">
+                <div class="modal-body">
+                    <!-- content goes here -->
+                    <form>
+                        <div class="form-group">
+                            <label for="exampleInputEmail1">Email address</label>
+                            <input type="email" class="form-control" id="registration-email-input" placeholder="Enter email">
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleInputPassword1">Password</label>
+                            <input type="password" class="form-control" id="registration-password-input" placeholder="Password">
+                        </div>
+                        <button id="registration-button" type="submit" class="btn btn-default">Submit</button>
+                    </form>
                 </div>
-                <button type="button" class="btn btn-secondary btn-lg" id="btn-member">Member</button>
-            </div>
-            <div class="button-panel panel col-xs-4" id="registration-button-panel">
-                <button type="submit" class="btn btn-secondary btn-lg" id="btn-register">Register</button>
-            </div>
-            <div class="button-panel panel col-xs-4" id="registration-panel">
-                <div class="form-group">
-                    <label for="registration-email-input">Email</label>
-                    <input type="email" class="form-control" id="registration-email-input" aria-describedby="emailHelp" placeholder="Enter email">
-                    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-                </div>
-                <div class="form-group">
-                    <label for="registration-password-input">Password</label>
-                    <input type="password" class="form-control" id="registration-password-input" placeholder="Password">
-                </div>
-                <button type="submit" class="btn btn-secondary btn-lg" id="btn-submit-registration">Submit</button>
             </div>
         </div>
     </div>
