updated login flow facilitated via modal and nav bar only

--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
             <div id="title" class="panel col-xs-12 text-center">Idiot Chef</div>
             <div id="explanation" class="col-xs-12 text-center">Site Explanation</div>
         </div>
-        <div class="row text-center" id="body-container">
-            <div class="button-panel panel col-xs-4">
-                <button type="button" class="btn btn-secondary btn-lg" id="btn-guest">Guest</button>
-            </div>
-        </div>
+<!--         <div class="row text-center" id="body-container">
+    <div class="button-panel panel col-xs-4">
+        <button type="button" class="btn btn-secondary btn-lg" id="btn-guest">Guest</button>
+    </div>
+</div> -->
         <div class="modal" id="registration-modal">
             <div class="modal-content">
                 <div class="modal-header">
