--- a/index.html
+++ b/index.html
@@ -63,13 +63,17 @@
 				<h3>Videos</h3>
 				<section id="video-list">
 					Click on a recipe title to view videos for that recipe!
-					<button id="get-videos">
-						Let's get cooking!
-					</button>
 				</section>
 			</div>
 		</div>
 	</div>
+	<footer class="footer">
+      <div class="container">
+        <a href="https://www.dominos.com/en/">
+        	In case of emergency
+        </a>
+      </div>
+    </footer>
 <!-- Javascript -->
 <script src="assets/javascript/TYapp.js"></script>
 </body>
