--- a/index.html
+++ b/index.html
@@ -15,25 +15,26 @@
 <body>
 	<div class="container">
 		<div class="row">
-			<div class="col-lg-3">
+			<div class="col-lg-2">
 				Google Login
 			</div>
-			<div class="col-lg-6 text-center">
+			<div class="col-lg-8 text-center">
 				<h1>
+					<img src="assets/images/logo.png">
 					The Idiot Chef
 				</h1>
 				<h3>
-					Add ingredients to the list, and our app will generate recipe ideas for you! Full instructions and video tutorial links are included!
+					Add ingredients to the list, and The Idiot Chef will generate recipe ideas for you! Full instructions and video tutorial links are included!
 				</h3>
 			</div>
-			<div class="col-lg-3">
+			<div class="col-lg-2">
 				
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-lg-3">
+			<div class="col-lg-2">
 			</div>
-			<div class="col-lg-6">
+			<div class="col-lg-8">
 				<div class="form-group">
 					<div class="input-group">
 						<input type="text" class="form-control" id="ingredients-search">
@@ -44,22 +45,22 @@
 					</div>
 				</div>	
 			</div>
-			<div class="col-lg-3">
+			<div class="col-lg-2">
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-lg-4">
+			<div class="col-lg-3">
 				<h3>Your ingredients</h3>
 				<section id="ingredients-list">
 					
 				</section>
 			</div>
-			<div class="col-lg-4">
+			<div class="col-lg-3">
 				<h3>Recipes</h3>
 				<section id="recipe-list">
 				</section>
 			</div>
-			<div class="col-lg-4">
+			<div class="col-lg-6">
 				<h3>Videos</h3>
 				<section id="video-list">
 					Click on a recipe title to view videos for that recipe!
