added some fonts/started some other styling TY

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="assets/styles/style.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
     <script src="https://use.fontawesome.com/475b1e26ce.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Kalam|Pacifico" rel="stylesheet">
 
     <!-- Firebase Reference -->
     <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
@@ -23,7 +24,7 @@
 					<img src="assets/images/logo.png">
 					The Idiot Chef
 				</h1>
-				<h3>
+				<h3 id="description">
 					Add ingredients to the list, and The Idiot Chef will generate recipe ideas for you! Full instructions and video tutorial links are included!
 				</h3>
 			</div>
@@ -49,7 +50,7 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-lg-3">
+			<div class="col-lg-3" id="ingredient-zone">
 				<h3>Your ingredients</h3>
 				<section id="ingredients-list">
 					
