--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       </div>
     </footer>
 <!-- Javascript -->
-<script src="assets/javascript/TYapp.js"></script>
+<script src="assets/javascript/TYapp2.js"></script>
 </body>
 
 
