--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
                 </div>
             </div>
  <!-- body below navbar -->
+            <div class="col-lg-2">
+            </div>
             <div class="col-lg-8 text-center">
                 <h1>
 					<img src="assets/images/logo.png">
@@ -112,12 +114,12 @@
                 <section id="ingredients-list">
                 </section>
             </div>
-            <div class="col-lg-3">
+            <div class="col-lg-3" id="recipe-zone">
                 <h3>Recipes</h3>
                 <section id="recipe-list">
                 </section>
             </div>
-            <div class="col-lg-6">
+            <div class="col-lg-6" id="video-zone">
                 <h3>Videos</h3>
                 <section id="video-list">
                     Click on a recipe title to view videos for that recipe!
