--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
                             </button>
-                            <a class="navbar-brand" href="#">TheIdiotChef</a>
+                            <a class="navbar-brand" href="#">
+                                <span class="glyphicon glyphicon-cutlery"></span>
+                                TheIdiotChef
+                            </a>
                         </div>
                         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                             <ul class="nav navbar-nav">
@@ -81,7 +84,6 @@
             </div>
             <div class="col-lg-8 text-center">
                 <h1>
-					<img src="assets/images/logo.png">
 					The Idiot Chef
 				</h1>
                 <h3 id="description">
@@ -109,18 +111,27 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-3" id="ingredient-zone">
-                <h3>Your ingredients</h3>
+            <div class="col-md-3" id="ingredient-zone">
+                <h3>
+                    <span class="glyphicon glyphicon-leaf"></span>
+                    Your ingredients
+                </h3>
                 <section id="ingredients-list">
                 </section>
             </div>
-            <div class="col-lg-3" id="recipe-zone">
-                <h3>Recipes</h3>
+            <div class="col-md-3" id="recipe-zone">
+                <h3>
+                    <span class="glyphicon glyphicon-list-alt"></span>
+                    Recipes
+                </h3>
                 <section id="recipe-list">
                 </section>
             </div>
-            <div class="col-lg-6" id="video-zone">
-                <h3>Videos</h3>
+            <div class="col-md-6" id="video-zone">
+                <h3>
+                    <span class="glyphicon glyphicon-film"></span>
+                    Videos
+                </h3>
                 <section id="video-list">
                     Click on a recipe title to view videos for that recipe!
                 </section>
@@ -129,7 +140,7 @@
     </div>
     <footer class="footer">
         <div class="container">
-            <a href="https://www.dominos.com/en/">
+            <a href="https://www.dominos.com/en/" target="_blank">
         	In case of emergency
         </a>
         </div>
