--- a/index.html
+++ b/index.html
@@ -17,6 +17,21 @@
 
 <body>
     <div class="container">
+    <!-- Error Modal -->
+        <div class="modal error-modal">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h4 class="modal-title ">Error!</h4>
+              </div>
+              <div class="modal-body" id="error-modal-message">
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" id="close-modal">Close</button>
+              </div>
+            </div><!-- /.modal-content -->
+          </div><!-- /.modal-dialog -->
+        </div><!-- /.modal -->
     <!-- navbar -->
         <div class="row">
             <div class="container">
