maps displaying now

--- a/index.html
+++ b/index.html
@@ -240,11 +240,11 @@
     <!-- map -->
     <div class="row">
         <div class="col-md-12">
-            <div id="map">MAP HERE??? Not displaying!!</div>
+            <div id="map"></div>
         </div>
     </div>
      <div class="row">
-         <div class="well">
+         <div class="well map-well hide">
             <div class="col-md-12">
                 <strong>Title: </strong><div id='marker-title'></div>
                 <strong>Position: </strong><div id='marker-position-lat'></div><div id='marker-position-lng'></div>
