--- a/index.html
+++ b/index.html
@@ -215,8 +215,8 @@
         </div>
     </div> <!-- End of Home Page -->
 
-<div class="recipe-shortlist-page hide"> <!--Recipe Shortlist Page -->
-     <div class="row recipe-shortlist" id="recipe-1">
+<div id='recipe-list' class="recipe-shortlist-page hide"> <!--Recipe Shortlist Page -->
+<!--      <div class="row recipe-shortlist" id="recipe-1">
         <div class="col-md-2"></div>
         <div class="col-md-8">
             <div class="well">
@@ -260,7 +260,7 @@
  put recipe summary data in here - click on well to go to next page for detailed recipe and videos                
             </div>
         </div>
-    </div>
+    </div> -->
 <!-- add on click to expand each item -->
 </div> <!--End of Recipe Shortlist Page -->
 <div class="detailed-view-page hide"> <!--Detailed View  Page -->
@@ -310,8 +310,8 @@
     <!-- <script src="assets/javascript/auth.js"></script> -->
     <!-- <script src="assets/javascript/TYapp.js"></script> -->
     <!-- <script src="assets/javascript/youtube.js"></script> -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA9pSrvDTzVXj7LToGHJUatXYl0Ts5LpuA&libraries=places&callback=initMap"
-    async defer></script>
+    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA9pSrvDTzVXj7LToGHJUatXYl0Ts5LpuA&libraries=places&callback=initMap"
+    async defer></script> -->
     <script src="assets/javascript/main-app.js"></script>
     <!-- <script src="assets/javascript/GoogleMapsLib.js"></script> -->
     
